implementare legatura user-timeoff

--- a/src/main/resources/templates/settings/company.twig
+++ b/src/main/resources/templates/settings/company.twig
@@ -235,8 +235,14 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="callout callout-info text-muted">
-                                            <p>Aici se vor seta toate regulile de acordare a diverselor tipuri de zile
-                                                (CO, WHF).</p>
+                                            <p>
+                                                Aici se vor seta toate regulile de acordare a zilelor de concediu
+                                                platite.
+                                            </p>
+                                            <p>
+                                                Daca nu se va seta o regula pentru un anumit tip de zi,
+                                                angajatii vor putea inregistra oricate zile din acel tip, ramanand ca
+                                                eventuala contorizare sa fie facuta manual de catre echipa de HR!</p>
                                         </div>
                                     </div>
                                 </div>
