fixuri pt cronurile de executie

--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -6,10 +6,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     {% if title is empty %}
-        {% set title = "Another HR Portal" %}
+        {% set title = "easyHR" %}
     {% endif %}
 
-    <title>{{ title }} | AHRP </title>
+    <title>{{ title }} | EZHR </title>
 
     <link rel="stylesheet" type="text/css" href="/webjars/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="/webjars/AdminLTE/3.0.5/dist/css/adminlte.min.css">
@@ -289,7 +289,7 @@
     <footer class="main-footer">
         <!-- To the right -->
         <div class="float-right d-none d-sm-inline">
-            Anything you want
+            Because things should be easy.
         </div>
         <!-- Default to the left -->
         <strong>Copyright &copy; {{ "now"|date("Y") }} AppBranch.</strong> All rights reserved.
