--- a/src/main/resources/templates/dashboard.twig
+++ b/src/main/resources/templates/dashboard.twig
@@ -2,63 +2,37 @@
 
 {% block body %}
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+        <div class="row holidays-widgets-row">
+            <div class="col-3">
+                <div class="small-box {% if holidayCurrentDays > 0 %}bg-gradient-lightblue{% else %}bg-gradient-danger{% endif %}">
+                    <div class="inner">
+                        <h3>{{ holidayCurrentDays }}</h3>
 
-                        <p class="card-text">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
-                        </p>
-
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <p>Concediu odihna</p>
                     </div>
-                </div>
-
-                <div class="card card-primary card-outline">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-
-                        <p class="card-text">
-                            Some quick example text to build on the card title and make up the bulk of the card's
-                            content.
-                        </p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                    <div class="icon">
+                        <i class="fas fa-plane-departure"></i>
                     </div>
-                </div><!-- /.card -->
-            </div>
-            <!-- /.col-md-6 -->
-            <div class="col-lg-6">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="m-0">Featured</h5>
-                    </div>
-                    <div class="card-body">
-                        <h6 class="card-title">Special title treatment</h6>
-
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-
-                <div class="card card-primary card-outline">
-                    <div class="card-header">
-                        <h5 class="m-0">Featured</h5>
-                    </div>
-                    <div class="card-body">
-                        <h6 class="card-title">Special title treatment</h6>
-
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
+                    <a href="#" class="small-box-footer">
+                        Concediu nou <i class="fas fa-arrow-circle-right"></i>
+                    </a>
                 </div>
             </div>
-            <!-- /.col-md-6 -->
+            <div class="col-3">
+                <div class="small-box {% if wfhCurrentDays > 0 %}bg-gradient-orange text-white{% else %}bg-gradient-danger{% endif %}">
+                    <div class="inner">
+                        <h3>{{ wfhCurrentDays }}</h3>
+
+                        <p>Munca de acasa #WFH</p>
+                    </div>
+                    <div class="icon">
+                        <i class="fas fa-laptop-house"></i>
+                    </div>
+                    <a href="#" class="small-box-footer">
+                        #WFH time <i class="fas fa-arrow-circle-right"></i>
+                    </a>
+                </div>
+            </div>
         </div>
-        <!-- /.row -->
-    </div><!-- /.container-fluid -->
+    </div>
 {% endblock %}
