--- a/src/main/resources/templates/settings/company.twig
+++ b/src/main/resources/templates/settings/company.twig
@@ -242,7 +242,8 @@
                                             <p>
                                                 Daca nu se va seta o regula pentru un anumit tip de zi,
                                                 angajatii vor putea inregistra oricate zile din acel tip, ramanand ca
-                                                eventuala contorizare sa fie facuta manual de catre echipa de HR!</p>
+                                                eventuala verificare a depasirii numarului sa fie facuta manual de catre
+                                                echipa de HR!</p>
                                         </div>
                                     </div>
                                 </div>
