--- a/src/main/resources/templates/login.twig
+++ b/src/main/resources/templates/login.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <title>Another HR Portal | Log in</title>
+    <title>easyHR | Log in</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
