--- a/src/main/resources/templates/dashboard.twig
+++ b/src/main/resources/templates/dashboard.twig
@@ -1,4 +1,111 @@
 {% extends "base.twig" %}
+{% set title = "EZ Dashboard" %}
+
+{% block stylesheets %}
+    <link href="/webjars/select2/4.0.13/css/select2.min.css" rel="stylesheet"/>
+    <link href="/webjars/ttskch__select2-bootstrap4-theme/1.4.0/dist/select2-bootstrap4.min.css" rel="stylesheet"/>
+    <link href="/webjars/AdminLTE/3.0.5/plugins/daterangepicker/daterangepicker.css" rel="stylesheet"/>
+    <style>
+        {% for holiday in holidayList %}
+        .holiday{{ holiday.id }}:before {
+            content: "{{ holiday.name }}";
+            position: absolute;
+
+            /* vertically center */
+            top: 50%;
+            transform: translateY(-50%);
+
+            /* move to right */
+            left: 100%;
+            margin-left: 15px; /* and add a small left margin */
+
+            /* basic styles */
+            /*width:200px;*/
+            padding: 10px;
+            border-radius: 10px;
+            background: #000;
+            color: #fff;
+            text-align: center;
+
+            display: none; /* hide by default */
+        }
+
+        .holiday{{ holiday.id }}:hover:before {
+            display: block;
+        }
+
+        {% endfor %}
+    </style>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/webjars/select2/4.0.13/js/select2.min.js"></script>
+    <script src="/webjars/AdminLTE/3.0.5/plugins/moment/moment-with-locales.min.js"></script>
+    <script src="/webjars/AdminLTE/3.0.5/plugins/moment/locale/ro.js"></script>
+    <script src="/webjars/AdminLTE/3.0.5/plugins/daterangepicker/daterangepicker.js"></script>
+    <script>
+        let holidays = {{ holidayListJson }};
+
+        $('document').ready(function () {
+            $('#timeOff').select2({
+                theme: 'bootstrap4'
+            });
+
+            $('#date').daterangepicker({
+                showDropdowns: true,
+                minYear: moment().format('YYYY'),
+                maxYear: moment().format('YYYY') + 1,
+                locale: 'ro',
+                isCustomDate: function (date) {
+                    for (let i = 0; i < holidays.length; i++) {
+                        let holiday = holidays[i];
+
+                        if (date.year() === holiday.date.year && (date.month() + 1) === holiday.date.month && date.date() === holiday.date.day) {
+                            if (holiday.suggestion) {
+                                return 'bg-gradient-warning holiday' + date.format("YYYYMMDD");
+                            } else {
+                                return 'bg-gradient-danger holiday' + date.format("YYYYMMDD");
+                            }
+                        }
+                    }
+                }
+            });
+
+            $('#saveNewUserTimeOff').on('click', function () {
+                let data = {
+                    'timeOffType': $('#timeOff').val(),
+                    'startDate': $('#date').data('daterangepicker').startDate.format("DD.MM.YYYY"),
+                    'endDate': $('#date').data('daterangepicker').endDate.format("DD.MM.YYYY")
+                };
+
+                $.ajax({
+                    type: "POST",
+                    url: '/time-off/add',
+                    dataType: "json",
+                    contentType: "application/json",
+                    data: JSON.stringify(data),
+                    success: function (data) {
+                        Swal.fire(
+                            'Concediu placut!',
+                            'Cererea de concediu a fost adaugata si urmeaza sa fie aprobata de catre <b>{{ loggedUser.responsibleUser.fullName }}</b>!',
+                            'success'
+                        ).then(() => {
+                            window.location.reload();
+                        });
+                    },
+                    error: function (data) {
+                        Swal.fire(
+                            'Eroare',
+                            data.responseJSON.message,
+                            'error'
+                        );
+                    }
+                });
+            });
+
+        });
+    </script>
+{% endblock %}
 
 {% block body %}
     <div class="container-fluid">
@@ -13,7 +120,7 @@
                     <div class="icon">
                         <i class="fas fa-plane-departure"></i>
                     </div>
-                    <a href="#" class="small-box-footer">
+                    <a href="#" class="small-box-footer" data-target="#modal-add-day" data-toggle="modal">
                         Concediu nou <i class="fas fa-arrow-circle-right"></i>
                     </a>
                 </div>
@@ -34,5 +141,47 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="modal fade" id="modal-add-day">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="add-day-title">Concediu nou</h4>
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <dl class="row">
+                        <dt class="col-sm-4"><label for="timeOff">Ce fel de zi?</label></dt>
+                        <dd class="col-sm-8">
+                            <select class="form-control" id="timeOff">
+                                {% for timeOff in timeOffList %}
+                                    <option value="{{ timeOff.id }}">{{ timeOff.name }}</option>
+                                {% endfor %}
+                            </select>
+                        </dd>
+
+                        <dt class="col-sm-4"><label for="date">Cand?</label></dt>
+                        <dd class="col-sm-8">
+                            <input type="text" id="date" autocomplete="off" class="form-control"
+                                   name="date" required>
+                        </dd>
+
+                        <dt class="col-sm-4"><label for="date">Aprobare:</label></dt>
+                        <dd class="col-sm-8">
+                            {{ loggedUser.responsibleUser.fullName }}
+                        </dd>
+                    </dl>
+                </div>
+                <div class="modal-footer justify-content-between">
+                    {# <button class="btn btn-default" data-dismiss="modal" type="button">Inchide</button> #}
+                    <button class="btn btn-primary" type="button" id="saveNewUserTimeOff">Adauga concediu</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
     </div>
 {% endblock %}
