--- a/src/main/resources/templates/base.twig
+++ b/src/main/resources/templates/base.twig
@@ -18,6 +18,11 @@
           href="/webjars/AdminLTE/3.0.5/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
     <link href="/webjars/AdminLTE/3.0.5/plugins/toastr/toastr.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <style>
+        body {
+            -webkit-font-smoothing: antialiased;
+        }
+    </style>
 
 
     {% block stylesheets %}
