--- a/src/main/resources/templates/error/404.twig
+++ b/src/main/resources/templates/error/404.twig
@@ -1,7 +1,31 @@
 {% extends "../base.twig" %}
 
-{% set title = "404" %}
+{% set title = "De negasit..." %}
+
+{% block stylesheets %}
+    <style>
+        .h3 {
+            font-family: 'Nunito Sans', sans-serif;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    Nu e nimic aici...
+    <div class="container-fluid w-100 h-100">
+        <div class="row">
+            <div class="col-12 text-center" style="font-size: 8.5rem; font-family: 'Nunito Sans', sans-serif;">
+                4 <i class="far fa-question-circle fa-spin"></i> 4
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="offset-3 col-6 text-center h4">
+                A fost mutata pagina? A fost stearsa? E in carantina la domiciliu? Nu a existat niciodata?
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="offset-3 col-6 text-center h4">
+                Hai sa ne intoarcem la <a href="/">dashboard</a> si sa incepem cautarea de acolo.
+            </div>
+        </div>
+    </div>
 {% endblock %}
